--- a/package.json
+++ b/package.json
@@ -12,11 +12,19 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/react": "^3.6.0",
+    "@astrojs/tailwind": "^5.1.0",
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.4",
     "astro": "^4.9.2",
-    "tailwindcss": "^3.4.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.3"
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "autoprefixer": "^10.4.19",
+    "nodemon": "^3.1.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4"
   }
 }
