--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/preact": "^3.5.0",
     "@astrojs/react": "^3.6.0",
     "@astrojs/tailwind": "^5.1.0",
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.4",
     "astro": "^4.9.2",
+    "node-fetch": "^3.3.2",
+    "preact": "^10.22.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "typescript": "^5.4.5"
